# hello-kitty-todo

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json
.github/workflows/: ci.yml  release.yml
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: AddTask.tsx  FilterMenu.tsx  Footer.tsx  Header.tsx  ResizeHandle.tsx  TaskList.tsx  TaskRow.tsx
src/hooks/: useTodos.ts  useWidgetWindow.ts
src/store/: appStore.ts  defaultState.ts
src/styles/: globals.css  widget.css
src/types/: todo.ts
src/utils/: date.ts
