[package]
name = "hello-kitty-todo"
version = "0.1.0"
description = "一个可爱的中文桌面待办小组件"
authors = ["xingshihao"]
edition = "2021"

[lib]
name = "hello_kitty_todo_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["macos-private-api", "tray-icon", "image-png"] }
tauri-plugin-store = "2"
